# full_auto_ws

.apriltags/: README.md  catkin.cmake
.apriltags/msg/: AprilTagDetections.msg  AprilTagPose.msg
.apriltags/src/: apriltags.cpp
apriltags/: CMakeLists.txt  LICENSE  Makefile  mainpage.dox  package.xml
apriltags/include/: apriltags.h
apriltags/launch/: apriltags.launch
apriltags/msg/: AprilTagDetection.msg
apriltomav/: CMakeLists.txt  catkin.cmake  package.xml
apriltomav/launch/: apriltomav.launch
apriltomav/src/: apriltomav.cpp
ceres_control/: CMakeLists.txt  catkin.cmake  package.xml
ceres_control/launch/: ceres_control.launch  ceres_control_app.launch
ceres_control/msg/: AprilTagDetectionStats.msg  ChangeState.msg  DetectionStats.msg
ceres_control/src/: ceres_contro_fa.cpp  ceres_control.cpp  ceres_control_app.cpp  ceres_control_app_fa.cpp  ceres_control_fa.cpp
ceres_control/srv/: ChangeBehavior.srv
ceres_logger/: CMakeLists.txt  catkin.cmake  package.xml
ceres_logger/launch/: ceres_logger.launch
ceres_logger/msg/: AprilTagPose.msg
ceres_logger/src/: ceres_logger.cpp
cerestags/: CMakeLists.txt  catkin.cmake  package.xml
cerestags/launch/: ceresgrid-ekf.launch  ceresgrid-zoh.launch  ceresgrid.launch  cerestags.launch
cerestags/msg/: AprilTagDetection.msg  DetectionStats.msg
cerestags/src/: ceres-grid-ekf.cpp  ceres-grid-main.cpp  ceres-grid-multi.cpp  ceres-grid-zoh.cpp  ceres-tags-main.cpp  ceresgrid-ekf.cpp
mavros/launch/: px4_blacklist.yaml  px4_config.yaml
robot_setup_tf/: package.xml
(+2 files in other folders)
