<?xml version="1.0"?>
<package>
  <name>apriltomav</name>
  <version>0.0.1</version>
  <description>
   Translates April tag detections to pose expected by mavros
  </description>
  <maintainer email="sahils@andrew.cmu.edu">Sahil Shah</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_generation</run_depend>
</package>
